[tool.poetry]
name = "repl_python3_TheHybridBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jishaku = "^2.2.0"
python-dotenv = "^0.19.0"
replit = "^3.2.4"
aiohttp = "^3.7.4"
discord = "^1.7.3"
Flask = "^2.0.1"
motor = "^2.5.0"
psutil = "^5.8.0"
country-converter = "^0.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
